Rename a label 'tier: mysql' to 'tier: database' and add a few labels

--- a/ansible/roles/kubernetes-apps/tasks/main.yml
+++ b/ansible/roles/kubernetes-apps/tasks/main.yml
@@ -30,7 +30,7 @@
   with_items:
     - mysql-password-secret.yaml.j2
     - mysql.yaml.j2
-    - wordpress.yaml.j2
+    - frontend.yaml.j2
     - ingress.yaml.j2
   become: yes
   become_user: "{{ kubernetes_user.name }}"
