--- a/ansible/roles/kubernetes-apps/defaults/main.yml
+++ b/ansible/roles/kubernetes-apps/defaults/main.yml
@@ -9,3 +9,8 @@ kubernetes_user:
 kubernetes_defnitions_root_dir: /opt/provision/kubernetes
 
 wordpress_mysql_password: clear_password
+
+ttrss_context_root: /
+ttrss_pqsql_user: ttrss
+ttrss_pqsql_database: ttrss
+ttrss_pqsql_password: clear_password
