--- a/ansible/roles/kubernetes-apps/defaults/main.yml
+++ b/ansible/roles/kubernetes-apps/defaults/main.yml
@@ -14,3 +14,8 @@ ttrss_context_root: /
 ttrss_pqsql_user: ttrss
 ttrss_pqsql_database: ttrss
 ttrss_pqsql_password: clear_password
+
+homeassistant_mysql_user: homeassistant
+homeassistant_mysql_database: homeassistant
+homeassistant_mysql_password: clear_password
+homeassistant_mysql_root_password: clear_password
