--- a/ansible/roles/kubernetes-apps/defaults/main.yml
+++ b/ansible/roles/kubernetes-apps/defaults/main.yml
@@ -19,3 +19,5 @@ homeassistant_mysql_user: homeassistant
 homeassistant_mysql_database: homeassistant
 homeassistant_mysql_password: clear_password
 homeassistant_mysql_root_password: clear_password
+
+nodered_context_root: /
