--- a/ansible/roles/kubernetes-apps/defaults/main.yml
+++ b/ansible/roles/kubernetes-apps/defaults/main.yml
@@ -8,6 +8,11 @@ kubernetes_user:
 
 kubernetes_defnitions_root_dir: /opt/provision/kubernetes
 
+
+kubernetes_dashboard_https_enabled: true
+kubernetes_dashboard_service_account_enabled: True
+kubernetes_dashboard_service_account_name: admin-user
+
 wordpress_mysql_password: clear_password
 
 ttrss_context_root: /
