--- a/ansible/roles/kubernetes-apps/tasks/apps/infra-dashboard.yml
+++ b/ansible/roles/kubernetes-apps/tasks/apps/infra-dashboard.yml
@@ -12,18 +12,18 @@
 
 - name: Install Kubernetes dashboard
   k8s:
-    definition: "{{ lookup('template',  'kubernetes/dashboard/' + item) }}"
+    definition: "{{ lookup('template', kubernetes_app_root_path + '/infra/dashboard/kubernetes/' + item) }}"
     state: present
   with_items:
-    - kubernetes-dashboard.yaml.j2
+    - dashboard.yaml.j2
     - ingress.yaml.j2
   become: yes
   become_user: "{{ kubernetes_user.name }}"
 
 - name: Create Kubernetes service account for dashboard
   k8s:
-    definition: "{{ lookup('template',  'kubernetes/dashboard/service-account.yaml.j2') }}"
+    definition: "{{ lookup('template',  kubernetes_app_root_path + '/infra/dashboard/kubernetes/service-account.yaml.j2') }}"
     state: present
   become: yes
   become_user: "{{ kubernetes_user.name }}"
-  when: kubernetes_dashboard_service_account_enaled
+  when: kubernetes_dashboard_service_account_enabled
