--- a/ansible/roles/kubernetes-apps/tasks/apps/home-homeassistant.yml
+++ b/ansible/roles/kubernetes-apps/tasks/apps/home-homeassistant.yml
@@ -1,8 +1,8 @@
 ---
 
-- name: Deploy wordpress
+- name: Deploy Home Assistant
   k8s:
-    definition: "{{ lookup('template', kubernetes_app_root_path + '/test/wordpress/kubernetes/' + item) }}"
+    definition: "{{ lookup('template', kubernetes_app_root_path + '/home/homeassistant/deploy/' + item) }}"
     state: present
   with_items:
     - mysql-password-secret.yaml.j2
@@ -11,4 +11,4 @@
     - ingress.yaml.j2
   become: yes
   become_user: "{{ kubernetes_user.name }}"
-  tags: kubernetes-app-wordpress
+  tags: kubernetes-app-homeassistant
