--- a/ansible/roles/kubernetes-apps/tasks/apps/home-nodered.yml
+++ b/ansible/roles/kubernetes-apps/tasks/apps/home-nodered.yml
@@ -2,7 +2,7 @@
 
 - name: Deploy Node-RED
   k8s:
-    definition: "{{ lookup('template', kubernetes_app_root_path + '/home/nodered/kubernetes/' + item) }}"
+    definition: "{{ lookup('template', kubernetes_app_root_path + '/home/nodered/deploy/' + item) }}"
     state: present
   with_items:
     - frontend.yaml.j2
