--- a/ansible/roles/kubernetes-apps/tasks/apps/test-simple.yml
+++ b/ansible/roles/kubernetes-apps/tasks/apps/test-simple.yml
@@ -2,7 +2,7 @@
 
 - name: Deploy simple application
   k8s:
-    definition: "{{ lookup('template', kubernetes_app_root_path + '/test/simple/kubernetes/' + item) }}"
+    definition: "{{ lookup('template', kubernetes_app_root_path + '/test/simple/deploy/' + item) }}"
     state: present
   with_items:
     - simpleservice.yaml.j2
