--- a/ansible/roles/kubernetes-storage/defaults/main.yml
+++ b/ansible/roles/kubernetes-storage/defaults/main.yml
@@ -7,15 +7,12 @@ kubernetes_user:
 kubernetes_local_storage_vg: kubernetes_vg
 
 #kubernetes_local_storage:
-#  - name: appname-tiername
+#  appname-tiername: 
 #    capacity: 20G
 #    filesystem: ext4 (optional)
 #    mount_path: /path/on/kubernetes/node (optional)
-#    prepare_task: group/app/prepare/tasks/main.yml (optional, the path under 'apps')
 #    reclaim_policy: Retain
 #    storage_class: local-storage
-#    affinity:
-#      hostname: somehost
 #    labels:
 #      app: appname
 #      tier: tiername
