--- a/ansible/roles/kubernetes-storage/meta/main.yml
+++ b/ansible/roles/kubernetes-storage/meta/main.yml
@@ -3,7 +3,7 @@
 galaxy_info:
   author: "Neraud"
   license: MIT
-  description: "Prepare Kubernetes Nodes for applications"
+  description: "Prepare application storage"
   min_ansible_version: 2.7
   platforms:
   - name: Debian
