--- a/ansible/roles/kubernetes-apps/tasks/main.yml
+++ b/ansible/roles/kubernetes-apps/tasks/main.yml
@@ -20,3 +20,6 @@
 
 - import_tasks: apps/home-nodered.yml
   tags: kubernetes-app-home-nodered
+
+- import_tasks: apps/home-mosquitto.yml
+  tags: kubernetes-app-home-mosquitto
