--- a/ansible/roles/kubernetes-apps/defaults/main.yml
+++ b/ansible/roles/kubernetes-apps/defaults/main.yml
@@ -26,3 +26,15 @@ homeassistant_mysql_password: clear_password
 homeassistant_mysql_root_password: clear_password
 
 nodered_context_root: /
+
+# First listener is used as default
+mosquitto_listeners: 
+  - port: 1883
+    secure: False
+    websocket: False
+
+# password generated with mosquitto_passwd
+#mosquitto_credientials: 
+#  credentials:
+#      user / Passw0rd
+#    - user:$6$iHdTqa9599orI9G2$/MPMDSugrFk98BUPguy/ap7gVStgB3sUYS1pQTdWcT6CFNz+8DcbMfL0pyiUpEjTpTHufPzbxAUXSzOYybiDgg==
