--- a/ansible/roles/kubernetes-storage/tasks/prepare.yml
+++ b/ansible/roles/kubernetes-storage/tasks/prepare.yml
@@ -1,9 +1,13 @@
 ---
 
 - include_tasks: apps/home-homeassistant.yml
-  tags: kubernetes-app-home-homeassistant
   when: "'homeassistant-frontend' in kubernetes_local_storage"
+  tags: kubernetes-app-home-homeassistant
 
 - include_tasks: apps/home-nodered.yml
-  tags: kubernetes-app-home-nodered
   when: "'nodered-frontend' in kubernetes_local_storage"
+  tags: kubernetes-app-home-nodered
+
+- include_tasks: apps/home-mosquitto.yml
+  when: "'mosquitto-backend' in kubernetes_local_storage"
+  tags: kubernetes-app-home-mosquitto
