--- a/ansible/roles/nginx/tasks/main.yml
+++ b/ansible/roles/nginx/tasks/main.yml
@@ -56,6 +56,7 @@
     path: "{{ item }}"
     state: directory
   with_items:
+    - "{{ nginx_streams_conf_dir }}"
     - "{{ nginx_streams_available_dir }}"
     - "{{ nginx_streams_enabled_dir }}"
   when: nginx_streams | default([]) | length  > 0
@@ -69,7 +70,7 @@
 - import_tasks: ssl_certs_selfsigned.yml
 - import_tasks: ssl_certs_letsencrypt.yml
 
-- name: Configure upstreams
+- name: Configure site upstreams
   template:
     src: upstreams.j2
     dest: /etc/nginx/conf.d/upstreams.conf
@@ -82,6 +83,13 @@
     dest: "/etc/nginx/sites-available/{{ item.name }}"
     backup: true
   with_items: "{{ nginx_sites | default([])  }}"
+  notify: Restart NGinx
+
+- name: Configure stream upstreams
+  template:
+    src: upstreams.j2
+    dest: "{{ nginx_streams_conf_dir }}/upstreams.conf"
+    backup: true
   notify: Restart NGinx
 
 - name: Configure streams
