--- a/ansible/roles/nginx/vars/main.yml
+++ b/ansible/roles/nginx/vars/main.yml
@@ -2,5 +2,6 @@
 
 nginx_default_disabled_robots_path: /var/www/robots_disallow_all.txt
 nginx_default_index_html_path: /var/www/html/index.nginx-debian.html
+nginx_streams_conf_dir: /etc/nginx/streams_conf.d
 nginx_streams_available_dir: /etc/nginx/streams-available
 nginx_streams_enabled_dir: /etc/nginx/streams-enabled
