--- a/ansible/roles/kubernetes-apps/defaults/main.yml
+++ b/ansible/roles/kubernetes-apps/defaults/main.yml
@@ -63,3 +63,8 @@ roomassistant_environment_variables:
         }
       }
     ]
+
+airsonic_context_path: /airsonic
+airsonic_extra_java_opts:
+  # https://docs.spring.io/spring-boot/docs/current/reference/htmlsingle/#howto-use-tomcat-behind-a-proxy-server
+  - -Dserver.use-forward-headers=true
