--- a/ansible/roles/kubernetes-apps/tasks/main.yml
+++ b/ansible/roles/kubernetes-apps/tasks/main.yml
@@ -26,3 +26,6 @@
 
 - import_tasks: apps/home-roomassistant.yml
   tags: kubernetes-app-home-roomassistant
+
+- import_tasks: apps/stream-airsonic.yml
+  tags: kubernetes-app-stream-airsonic
