--- a/ansible/roles/kubernetes-infra/defaults/main.yml
+++ b/ansible/roles/kubernetes-infra/defaults/main.yml
@@ -7,3 +7,5 @@ kubernetes_user:
   home: "{{ standard_user.home }}"
 
 #kubernetes_nginx_ingress_mqtt_target: "mqttservice:mqttport"
+
+kubernetes_local_lvm_storage_class_name: local-lvm
