--- a/ansible/roles/kubernetes-apps/defaults/main.yml
+++ b/ansible/roles/kubernetes-apps/defaults/main.yml
@@ -70,3 +70,6 @@ airsonic_extra_java_opts:
   - -Dserver.use-forward-headers=true
   - -Dairsonic.defaultMusicFolder=/mnt/multimetia/Music
   - -Dairsonic.defaultPodcastFolder=/mnt/multimetia/Podcasts
+
+# Look at the README.md to find out how to get your token
+#plex_plex_token: 
