--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -51,6 +51,10 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
 			vb.customize ["modifyvm", :id, "--cpus", master_conf['cpu']]
 		end
 		
+		# Used to set up Plex Media Server.
+		# It needs to be called using localhost the first time
+		master.vm.network "forwarded_port", guest: 32400, host: 32400
+
 		master.vm.network "private_network", ip: master_conf['ip']
 		master.vm.synced_folder "../", "/opt/provision", type: "virtualbox"
 		master.vm.provision "shell", path: "init_new_node.sh", args: "ansible", keep_color: true
