--- a/ansible/roles/kubernetes-apps/defaults/main.yml
+++ b/ansible/roles/kubernetes-apps/defaults/main.yml
@@ -73,3 +73,5 @@ airsonic_extra_java_opts:
 
 # Look at the README.md to find out how to get your token
 #plex_plex_token: 
+
+gitlab_context_path: /gitlab
