Improve kubelet configuration to read from a list of args

--- a/ansible/roles/kubernetes-common/tasks/main.yml
+++ b/ansible/roles/kubernetes-common/tasks/main.yml
@@ -34,7 +34,7 @@
     - kubeadm
     state: present
 
-- name: Configure kubelet IP
+- name: Configure kubelet
   template:
     dest: /etc/default/kubelet
     src: kubelet.j2
