--- a/ansible/roles/kubernetes-storage/tasks/prepare.yml
+++ b/ansible/roles/kubernetes-storage/tasks/prepare.yml
@@ -1,5 +1,9 @@
 ---
 
+- include_tasks: apps/monitoring-grafana.yml
+  when: "'grafana-frontend' in kubernetes_local_storage"
+  tags: kubernetes-app-monitoring-grafana
+
 - include_tasks: apps/home-homeassistant.yml
   when: "'homeassistant-frontend' in kubernetes_local_storage"
   tags: kubernetes-app-home-homeassistant
