Add Grafana target in Prometheus

--- a/apps/monitoring/grafana/deploy/service.yaml
+++ b/apps/monitoring/grafana/deploy/service.yaml
@@ -3,6 +3,9 @@ kind: Service
 metadata:
   name: grafana
   namespace: monitoring
+  labels:
+    app: grafana
+    prometheus-target: grafana
 spec:
   ports:
   - name: http
