Add Gitlab targets in Prometheus

--- a/ansible/roles/kubernetes-apps/tasks/apps/dev-gitlab.yml
+++ b/ansible/roles/kubernetes-apps/tasks/apps/dev-gitlab.yml
@@ -6,6 +6,7 @@
     state: present
   with_items:
     - frontend.yaml.j2
+    - prometheus-service.yaml.j2
     - ingress.yaml.j2
   become: yes
   become_user: "{{ kubernetes_user.name }}"
