--- a/ansible/roles/kubernetes-apps/tasks/apps/dev-gitlab.yml
+++ b/ansible/roles/kubernetes-apps/tasks/apps/dev-gitlab.yml
@@ -2,11 +2,9 @@
 
 - name: Deploy Gitlab
   k8s:
-    definition: "{{ lookup('template', kubernetes_app_root_path + '/dev/gitlab/deploy/' + item) }}"
+    definition: "{{ lookup(item | regex_search('.j2$') | ternary('template','file'), item) }}"
     state: present
-  with_items:
-    - frontend.yaml.j2
-    - prometheus-service.yaml.j2
-    - ingress.yaml.j2
+  with_fileglob:
+    - "{{ kubernetes_app_root_path }}/dev/gitlab/deploy/*.yaml*"
   become: yes
   become_user: "{{ kubernetes_user.name }}"
