--- a/ansible/roles/kubernetes-apps/tasks/apps/home-homeassistant.yml
+++ b/ansible/roles/kubernetes-apps/tasks/apps/home-homeassistant.yml
@@ -2,12 +2,9 @@
 
 - name: Deploy Home Assistant
   k8s:
-    definition: "{{ lookup('template', kubernetes_app_root_path + '/home/homeassistant/deploy/' + item) }}"
+    definition: "{{ lookup(item | regex_search('.j2$') | ternary('template','file'), item) }}"
     state: present
-  with_items:
-    - mysql-password-secret.yaml.j2
-    - mysql.yaml.j2
-    - frontend.yaml.j2
-    - ingress.yaml.j2
+  with_fileglob:
+    - "{{ kubernetes_app_root_path }}/home/homeassistant/deploy/*.yaml*"
   become: yes
   become_user: "{{ kubernetes_user.name }}"
