--- a/ansible/roles/kubernetes-apps/tasks/apps/home-roomassistant.yml
+++ b/ansible/roles/kubernetes-apps/tasks/apps/home-roomassistant.yml
@@ -2,9 +2,9 @@
 
 - name: Deploy Room Assistant
   k8s:
-    definition: "{{ lookup('template', kubernetes_app_root_path + '/home/roomassistant/deploy/' + item) }}"
+    definition: "{{ lookup(item | regex_search('.j2$') | ternary('template','file'), item) }}"
     state: present
-  with_items:
-    - backend.yaml.j2
+  with_fileglob:
+    - "{{ kubernetes_app_root_path }}/home/roomassistant/deploy/*.yaml*"
   become: yes
   become_user: "{{ kubernetes_user.name }}"
