--- a/ansible/roles/kubernetes-apps/tasks/apps/infra-dashboard.yml
+++ b/ansible/roles/kubernetes-apps/tasks/apps/infra-dashboard.yml
@@ -10,20 +10,21 @@
     file: dashboard_http.yml
   when: not (kubernetes_dashboard_https_enabled | default(true) | bool)
 
-- name: Install Kubernetes dashboard
+- name: Deploy Kubernetes dashboard
   k8s:
-    definition: "{{ lookup('template', kubernetes_app_root_path + '/infra/dashboard/deploy/' + item) }}"
+    definition: "{{ lookup(item | regex_search('.j2$') | ternary('template','file'), item) }}"
     state: present
-  with_items:
-    - dashboard.yaml.j2
-    - ingress.yaml.j2
+  with_fileglob:
+    - "{{ kubernetes_app_root_path }}/infra/dashboard/deploy/*.yaml*"
   become: yes
   become_user: "{{ kubernetes_user.name }}"
 
 - name: Create Kubernetes service account for dashboard
   k8s:
-    definition: "{{ lookup('template',  kubernetes_app_root_path + '/infra/dashboard/deploy/service-account.yaml.j2') }}"
+    definition: "{{ lookup(item | regex_search('.j2$') | ternary('template','file'), item) }}"
     state: present
+  with_fileglob:
+    - "{{ kubernetes_app_root_path }}/infra/dashboard/deploy/service-account/*.yaml*"
   become: yes
   become_user: "{{ kubernetes_user.name }}"
   when: kubernetes_dashboard_service_account_enabled
