--- a/ansible/roles/kubernetes-apps/tasks/apps/infra-unifi.yml
+++ b/ansible/roles/kubernetes-apps/tasks/apps/infra-unifi.yml
@@ -1,13 +1,10 @@
 ---
 
-- name: Install Unifi
+- name: Deploy Unifi
   k8s:
-    definition: "{{ lookup('template', kubernetes_app_root_path + '/infra/unifi/deploy/' + item) }}"
+    definition: "{{ lookup(item | regex_search('.j2$') | ternary('template','file'), item) }}"
     state: present
-  with_items:
-    - frontend.yaml.j2
-    - service-public.yaml.j2
-    - service-private.yaml.j2
-    - ingress.yaml.j2
+  with_fileglob:
+    - "{{ kubernetes_app_root_path }}/infra/unifi/deploy/*.yaml*"
   become: yes
   become_user: "{{ kubernetes_user.name }}"
