--- a/ansible/roles/kubernetes-apps/tasks/apps/monitoring-grafana.yml
+++ b/ansible/roles/kubernetes-apps/tasks/apps/monitoring-grafana.yml
@@ -11,18 +11,9 @@
 
 - name: Deploy Grafana
   k8s:
-    definition: "{{ lookup('file', item) }}"
+    definition: "{{ lookup(item | regex_search('.j2$') | ternary('template','file'), item) }}"
     state: present
   with_fileglob:
-    - "{{ kubernetes_app_root_path }}/monitoring/grafana/deploy/*.yaml"
-  become: yes
-  become_user: "{{ kubernetes_user.name }}"
-
-- name: Deploy Grafana
-  k8s:
-    definition: "{{ lookup('template', item) }}"
-    state: present
-  with_fileglob:
-    - "{{ kubernetes_app_root_path }}/monitoring/grafana/deploy/*.yaml.j2"
+    - "{{ kubernetes_app_root_path }}/monitoring/grafana/deploy/*.yaml*"
   become: yes
   become_user: "{{ kubernetes_user.name }}"
