--- a/ansible/roles/kubernetes-apps/tasks/apps/web-ttrss.yml
+++ b/ansible/roles/kubernetes-apps/tasks/apps/web-ttrss.yml
@@ -2,12 +2,9 @@
 
 - name: Deploy TT-RSS
   k8s:
-    definition: "{{ lookup('template', kubernetes_app_root_path + '/web/ttrss/deploy/' + item) }}"
+    definition: "{{ lookup(item | regex_search('.j2$') | ternary('template','file'), item) }}"
     state: present
-  with_items:
-    - pgsql-password-secret.yaml.j2
-    - pgsql.yaml.j2
-    - frontend.yaml.j2
-    - ingress.yaml.j2
+  with_fileglob:
+    - "{{ kubernetes_app_root_path }}/web/ttrss/deploy/*.yaml*"
   become: yes
   become_user: "{{ kubernetes_user.name }}"
