Add Fluent Bit targets in Prometheus

--- a/apps/logging/fluent-bit/deploy/fluent-bit-ds.yaml
+++ b/apps/logging/fluent-bit/deploy/fluent-bit-ds.yaml
@@ -25,6 +25,7 @@ spec:
         imagePullPolicy: Always
         ports:
           - containerPort: 2020
+            name: metrics
         env:
         - name: FLUENT_ELASTICSEARCH_HOST
           value: "elasticsearch"
