--- a/apps/monitoring/prometheus-operator/deploy/prometheus/roleSpecificNamespaces.yaml
+++ b/apps/monitoring/prometheus-operator/deploy/prometheus/roleSpecificNamespaces.yaml
@@ -51,3 +51,21 @@ rules:
   - get
   - list
   - watch
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: Role
+metadata:
+  name: prometheus-k8s
+  namespace: logging
+rules:
+- apiGroups:
+  - ""
+  resources:
+  - nodes
+  - services
+  - endpoints
+  - pods
+  verbs:
+  - get
+  - list
+  - watch
