Add tags on Grafana dashboards

--- a/apps/monitoring/grafana/deploy/dashboards/k8s-node-rsrc-use.yaml
+++ b/apps/monitoring/grafana/deploy/dashboards/k8s-node-rsrc-use.yaml
@@ -858,7 +858,8 @@ data:
         "schemaVersion": 14,
         "style": "dark",
         "tags": [
-
+            "infra",
+            "kubernetes"
         ],
         "templating": {
             "list": [
@@ -899,7 +900,7 @@ data:
                     "sort": 2,
                     "tagValuesQuery": "",
                     "tags": [
-
+                        
                     ],
                     "tagsQuery": "",
                     "type": "query",
