--- a/apps/monitoring/grafana/deploy/dashboards/k8s-resources-namespace.yaml
+++ b/apps/monitoring/grafana/deploy/dashboards/k8s-resources-namespace.yaml
@@ -754,7 +754,8 @@ data:
         "schemaVersion": 14,
         "style": "dark",
         "tags": [
-
+            "infra",
+            "kubernetes"
         ],
         "templating": {
             "list": [
@@ -795,7 +796,7 @@ data:
                     "sort": 2,
                     "tagValuesQuery": "",
                     "tags": [
-
+                        
                     ],
                     "tagsQuery": "",
                     "type": "query",
