--- a/apps/monitoring/grafana/deploy/dashboards/nodes.yaml
+++ b/apps/monitoring/grafana/deploy/dashboards/nodes.yaml
@@ -1036,7 +1036,8 @@ data:
         "schemaVersion": 14,
         "style": "dark",
         "tags": [
-
+            "infra",
+            "hardware"
         ],
         "templating": {
             "list": [
