--- a/apps/monitoring/grafana/deploy/dashboards/k8s-cluster-rsrc-use.yaml
+++ b/apps/monitoring/grafana/deploy/dashboards/k8s-cluster-rsrc-use.yaml
@@ -858,7 +858,8 @@ data:
         "schemaVersion": 14,
         "style": "dark",
         "tags": [
-
+            "infra",
+            "kubernetes"
         ],
         "templating": {
             "list": [
