--- a/apps/monitoring/grafana/deploy/dashboards/k8s-resources-cluster.yaml
+++ b/apps/monitoring/grafana/deploy/dashboards/k8s-resources-cluster.yaml
@@ -1270,7 +1270,8 @@ data:
         "schemaVersion": 14,
         "style": "dark",
         "tags": [
-
+            "infra",
+            "kubernetes"
         ],
         "templating": {
             "list": [
