--- a/apps/monitoring/grafana/deploy/dashboards/k8s-resources-pod.yaml
+++ b/apps/monitoring/grafana/deploy/dashboards/k8s-resources-pod.yaml
@@ -754,7 +754,8 @@ data:
         "schemaVersion": 14,
         "style": "dark",
         "tags": [
-
+            "infra",
+            "kubernetes"
         ],
         "templating": {
             "list": [
