--- a/apps/monitoring/grafana/deploy/dashboards/pods.yaml
+++ b/apps/monitoring/grafana/deploy/dashboards/pods.yaml
@@ -348,7 +348,8 @@ data:
         "schemaVersion": 14,
         "style": "dark",
         "tags": [
-
+            "infra",
+            "kubernetes"
         ],
         "templating": {
             "list": [
