--- a/apps/monitoring/grafana/deploy/dashboards/statefulset.yaml
+++ b/apps/monitoring/grafana/deploy/dashboards/statefulset.yaml
@@ -747,7 +747,8 @@ data:
         "schemaVersion": 14,
         "style": "dark",
         "tags": [
-
+            "infra",
+            "kubernetes"
         ],
         "templating": {
             "list": [
