--- a/ansible/roles/kubernetes-apps/tasks/apps/monitoring-grafana.yml
+++ b/ansible/roles/kubernetes-apps/tasks/apps/monitoring-grafana.yml
@@ -1,13 +1,10 @@
 ---
 
-- name: Deploy Grafana dashboards
-  k8s:
-    definition: "{{ lookup('file', item) }}"
-    state: present
+- name: List dashboards
+  set_fact:
+    grafana_dashboard_files: "{{ grafana_dashboard_files | default([]) + [ item ] }}"
   with_fileglob:
-    - "{{ kubernetes_app_root_path }}/monitoring/grafana/deploy/dashboards/*.yaml"
-  become: yes
-  become_user: "{{ kubernetes_user.name }}"
+    - "{{ kubernetes_app_root_path }}/monitoring/grafana/config/dashboards/*.json"
 
 - name: Deploy Grafana
   k8s:
