Move namespace creation to a dedicated in the infra role.

--- a/ansible/roles/kubernetes-infra/defaults/main.yml
+++ b/ansible/roles/kubernetes-infra/defaults/main.yml
@@ -18,3 +18,7 @@ kubernetes_nas_nfs_storage_class_name: nas-nfs
 #    reclaim_policy: Retain
 #    labels:
 #      detail: whatever
+
+kubernetes_extra_namespaces:
+  - monitoring
+  - logging
