Fix NGinx input for Fluent Bit The access logs are using a custom format, and require a custom parser

--- a/apps/logging/fluent-bit/config/includes/input-nginx.conf
+++ b/apps/logging/fluent-bit/config/includes/input-nginx.conf
@@ -1,8 +1,19 @@
 [INPUT]
     Name              tail
-    Path              /var/log/nginx/*.log
+    Path              /var/log/nginx/*_access.log
+    Parser            nginx_custom_main
+    DB                /var/log/flb_nginx_access.db
+    Path_Key          file
+    Mem_Buf_Limit     5MB
+    Skip_Long_Lines   On
+    Refresh_Interval  10
+
+[INPUT]
+    Name              tail
+    Path              /var/log/nginx/*_error.log
     Parser            nginx
-    DB                /var/log/flb_nginx.db
+    DB                /var/log/flb_nginx_error.db
+    Path_Key          file
     Mem_Buf_Limit     5MB
     Skip_Long_Lines   On
     Refresh_Interval  10
