Fix NGinx input for Fluent Bit The error logs are using a different format, and require a custom parser

--- a/apps/logging/fluent-bit/config/includes/input-nginx.conf
+++ b/apps/logging/fluent-bit/config/includes/input-nginx.conf
@@ -1,5 +1,6 @@
 [INPUT]
     Name              tail
+    Tag               nginx_access
     Path              /var/log/nginx/*_access.log
     Parser            nginx_custom_main
     DB                /var/log/flb_nginx_access.db
@@ -10,8 +11,9 @@
 
 [INPUT]
     Name              tail
+    Tag               nginx_error
     Path              /var/log/nginx/*_error.log
-    Parser            nginx
+    Parser            nginx_error
     DB                /var/log/flb_nginx_error.db
     Path_Key          file
     Mem_Buf_Limit     5MB
