--- a/apps/logging/fluent-bit/config/parsers/nginx_custom.conf
+++ b/apps/logging/fluent-bit/config/parsers/nginx_custom.conf
@@ -4,3 +4,11 @@
     Regex ^(?<remote>[^ ]*) (?<host>[^ ]*) (?<user>[^ ]*) \[(?<time>[^\]]*)\] "(?<method>\S+)(?: +(?<path>[^\"]*?)(?: +\S*)?)?" (?<code>[^ ]*) (?<size>[^ ]*)(?: "(?<referer>[^\"]*)" "(?<agent>[^\"]*)")? (?<request_length>[^ ]*) (?<body_bytes_sent>[^ ]*)$
     Time_Key time
     Time_Format %d/%b/%Y:%H:%M:%S %z
+
+[PARSER]
+    Name   nginx_error
+    Format regex
+    Regex ^(?<time>\S* \S*)\s+\[(?<priority>\S+)\]\s+(?<pid>\d+)#(?<tid>\d+):\s+(\*(?<cid>\d+)\s+)?(?<message>.*?)$
+    Time_Key time
+    Time_Format %Y/%m/%d/ %H:%M:%S
+    Time_Offset +0100
