--- a/ansible/roles/kubernetes-apps/defaults/main.yml
+++ b/ansible/roles/kubernetes-apps/defaults/main.yml
@@ -82,3 +82,14 @@ prometheus_allowed_namespaces:
   - kube-system
   - monitoring
   - logging
+
+alertmanager_alerts_smtp_enabled: False
+#alertmanager_alerts_smtp_smarthost: smtp.gmail.com:587
+#alertmanager_alerts_smtp_from: whatever@gmail.com
+#alertmanager_alerts_smtp_auth_username: whatever@gmail.com
+#alertmanager_alerts_smtp_auth_password: Passw0rd
+#alertmanager_alerts_default_receiver: default
+#alertmanager_alerts_receivers: 
+# - name: "{{ alertmanager_alerts_default_receiver }}"
+#   emails_to: 
+#     - whatever@gmail.com
