--- a/ansible/roles/kubernetes-infra/tasks/main.yml
+++ b/ansible/roles/kubernetes-infra/tasks/main.yml
@@ -2,13 +2,10 @@
 
 - name: Deploy Nginx Ingress
   k8s:
-    definition: "{{ lookup('template', 'kubernetes/ingress-nginx/' + item) }}"
+    definition: "{{ lookup(item | regex_search('.j2$') | ternary('template','file'), item) }}"
     state: present
-  with_items:
-    - mandatory.yaml.j2
-    - service-nodeport.yaml.j2
-    - config.yaml.j2
-    - config-tcp.yaml.j2
+  with_fileglob:
+    - "{{ kubernetes_app_root_path }}/infra/ingress-nginx/deploy/*.yaml*"
   become: yes
   become_user: "{{ kubernetes_user.name }}"
 
