Add NGinx Ingress Prometheus target

--- a/ansible/roles/kubernetes-apps/defaults/main.yml
+++ b/ansible/roles/kubernetes-apps/defaults/main.yml
@@ -80,6 +80,7 @@ gitlab_context_path: /gitlab
 prometheus_allowed_namespaces:
   - default
   - kube-system
+  - ingress-nginx
   - monitoring
   - logging
 
