--- a/apps/logging/fluent-bit/config/includes/input-nginx.conf
+++ b/apps/logging/fluent-bit/config/includes/input-nginx.conf
@@ -19,3 +19,9 @@
     Mem_Buf_Limit     5MB
     Skip_Long_Lines   On
     Refresh_Interval  10
+
+[FILTER]
+    Name    lua
+    Match   nginx_access
+    script  nginx_site_extractor.lua
+    call    extract_site
