--- a/apps/logging/fluent-bit/config/parsers/nginx_custom.conf
+++ b/apps/logging/fluent-bit/config/parsers/nginx_custom.conf
@@ -1,7 +1,7 @@
 [PARSER]
     Name   nginx_custom_main
     Format regex
-    Regex ^(?<remote>[^ ]*) (?<host>[^ ]*) (?<user>[^ ]*) \[(?<time>[^\]]*)\] "(?<method>\S+)(?: +(?<path>[^\"]*?)(?: +\S*)?)?" (?<code>[^ ]*) (?<size>[^ ]*)(?: "(?<referer>[^\"]*)" "(?<agent>[^\"]*)")? (?<request_length>[^ ]*) (?<body_bytes_sent>[^ ]*)$
+    Regex ^(?<remote>[^ ]*) (?<host>[^ ]*) (?<user>[^ ]*) \[(?<time>[^\]]*)\] "(?<method>\S+)(?: +(?<path>[^\"]*?)(?: +\S*)?)?" (?<code>[^ ]*) (?<size>[^ ]*)(?: "(?<referer>[^\"]*)" "(?<user_agent>[^\"]*)")? (?<request_length>[^ ]*) (?<body_bytes_sent>[^ ]*)$
     Time_Key time
     Time_Format %d/%b/%Y:%H:%M:%S %z
 
