Add Fluentd geoip parsing for fail2ban logs

--- a/apps/logging/fluent-bit/config/parsers/fail2ban.conf
+++ b/apps/logging/fluent-bit/config/parsers/fail2ban.conf
@@ -1,7 +1,7 @@
 [PARSER]
     Name   fail2ban
     Format regex
-    Regex  ^(?<time>\S* \S*)\s+(?<criteria>\S*)\s+\[(?<pid>[0-9]+)\]:\s+(?<priority>\S+)\s+(\[(?<jail>\S+)\]\s+)?(?<message>.*?)$
+    Regex  ^^(?<time>\S* \S*)\s+(?<criteria>\S*)\s+\[(?<pid>[0-9]+)\]:\s+(?<priority>\S+)\s+(\[(?<jail>\S+)\]\s+)?((?<action>(Found|Ban|Unban)) (?<ip>\d+\.\d+\.\d+\.\d+))?(?<message>.*)?$$
     Time_Key time
     Time_Format %Y-%m-%d %H:%M:%S.%L
     Time_Offset +0100
