Disable FluentBit kubernetes merge_log.
It triggered many logs like :
[debug] [filter_kube] could not merge JSON log as requested

--- a/apps/logging/fluent-bit/config/includes/filter-kubernetes.conf
+++ b/apps/logging/fluent-bit/config/includes/filter-kubernetes.conf
@@ -2,5 +2,5 @@
     Name                kubernetes
     Match               kube.*
     Kube_URL            https://kubernetes.default.svc.cluster.local:443
-    Merge_Log           On
+    Merge_Log           Off
     K8S-Logging.Parser  On
